# ping-api

./: Cargo.toml  Dockerfile
manifests/: cert.yml  deployment.yml  ingress.yml
src/: main.rs
